--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -35,3 +35,20 @@
     border-radius: 50%;
     margin-right: 20px;
 }
+.small-sidebar{
+    width: 5%;
+}
+.small-sidebar p{
+    display: none;
+}
+.small-sidebar h3{
+    display: none;
+}
+.small-sidebar hr{
+    width: 50%;
+    margin-bottom: 25px;
+}
+.side-link.active img{
+    padding-bottom: 2px;
+    border-bottom: 3px solid red;
+}
