--- a/src/Pages/Video/Video.css
+++ b/src/Pages/Video/Video.css
@@ -8,3 +8,8 @@
     justify-content: space-between;
     flex-wrap: wrap;
 }
+@media (max-width:900px) {
+    .play-container{
+        padding: 0 5%;
+    }
+}
